[package]
name = "bfgs"
description = "A pure Rust implementation of the BFGS optimization algorithm"
readme = "README.md"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/bfgs"
repository = "https://github.com/paulkernfeld/bfgs"
edition = "2018"

[workspace]

[dependencies]
ndarray = "0.16.1"
thiserror = "2.0.12"

[dev-dependencies]
spectral = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
